fix gap

--- a/modules/Main/PreparedSolutions/PreparedSolutions.module.scss
+++ b/modules/Main/PreparedSolutions/PreparedSolutions.module.scss
@@ -67,7 +67,7 @@
 	.constructorBottomWrapper {
 		@apply flex;
 
-		gap: 108px;
+		gap: 100px;
 
 		.leftBlock {
 			@apply flex flex-col;
